--- a/WebLayout.csproj
+++ b/WebLayout.csproj
@@ -2174,6 +2174,7 @@
     <Content Include="CSS\bootstrap-icons-1.11.3\youtube.svg" />
     <Content Include="CSS\bootstrap-icons-1.11.3\zoom-in.svg" />
     <Content Include="CSS\bootstrap-icons-1.11.3\zoom-out.svg" />
+    <Content Include="CustomComponent\WUCMenuFinanceiro.ascx" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
@@ -2209,6 +2210,7 @@
     <Content Include="CSS\bootstrap-icons-1.11.3\font\bootstrap-icons.scss" />
     <Content Include="CSS\bootstrap-icons-1.11.3\font\fonts\bootstrap-icons.woff" />
     <Content Include="CSS\bootstrap-icons-1.11.3\font\fonts\bootstrap-icons.woff2" />
+    <Content Include="CustomComponent\WUCMenuAdministracao.ascx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -2237,10 +2239,8 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
-    <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
-    <Content Include="Site.Mobile.Master" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -2258,6 +2258,13 @@
     </Compile>
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CustomComponent\WUCMenuFinanceiro.ascx.cs">
+      <DependentUpon>WUCMenuFinanceiro.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CustomComponent\WUCMenuFinanceiro.ascx.designer.cs">
+      <DependentUpon>WUCMenuFinanceiro.ascx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
@@ -2284,19 +2291,12 @@
     <Compile Include="Site.Master.designer.cs">
       <DependentUpon>Site.Master</DependentUpon>
     </Compile>
-    <Compile Include="Site.Mobile.Master.cs">
-      <DependentUpon>Site.Mobile.Master</DependentUpon>
+    <Compile Include="CustomComponent\WUCMenuAdministracao.ascx.cs">
+      <DependentUpon>WUCMenuAdministracao.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Site.Mobile.Master.designer.cs">
-      <DependentUpon>Site.Mobile.Master</DependentUpon>
-    </Compile>
-    <Compile Include="ViewSwitcher.ascx.cs">
-      <DependentUpon>ViewSwitcher.ascx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="ViewSwitcher.ascx.designer.cs">
-      <DependentUpon>ViewSwitcher.ascx</DependentUpon>
+    <Compile Include="CustomComponent\WUCMenuAdministracao.ascx.designer.cs">
+      <DependentUpon>WUCMenuAdministracao.ascx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -2317,6 +2317,9 @@
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
